tests/fixtures/invalid/float_lshift_bytes.py
# Cannot left shift Float and Bytes
x: float = 1.0 << b"hello"
